Fixed overflow

--- a/public/globals.css
+++ b/public/globals.css
@@ -17,12 +17,14 @@ body{
 .topNav a:hover{
     color: gray;
 }
+
+
 /*404 Page*/
 
 .errorPage{
     background-color: #0078D7;
     color: white;
-    width: 80vw;
+    width: 60vw;
     height: 100vh;
     display: flex;
     padding: 0 20vw;
@@ -79,5 +81,4 @@ body{
 .errorPage div span{
     margin: 0;
     font-size: 1vw;
-
 }
